# datafusion-c-api

./: Cargo.toml  README.md  build.rs
include/: datafusion.h
src/: lib.rs
test/: Makefile  README.md  run_tests.sh  test_datafusion.c  test_datafusion_clang  test_datafusion_gcc
tests/: iceberg_test.c
